--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-This is a jQuery chatbox. It is free to use. NO DATABASE LINK has been set up in this version of the project. Though it will be added in the newer versions of the project. Stay connected!
+This is a jQuery chatbox. There is no database connection being setup right now. It is a simple project for the learning of jQuery.
